# sfml-game-development

./: .clang-format  CMakeLists.txt  LICENSE  game.hpp  main.cpp
src/: CMakeLists.txt  game.cpp  game.hpp  texture_holder.cpp  texture_holder.hpp
